# doggy_cam

./: .gitignore  README.md  architecture.drawio  build.sh  install_opencv.sh  test.ipynb
app/: package-lock.json  package.json
core/: Dockerfile  README.md  main.py  pyproject.toml
core/src/: config.py  core.py  eventer.py  events.py  main.py  server.py  util.py
data/detect/: format.ipynb  format_hapa.ipynb
kubernetes/: kustomization.yaml  namespaces.yaml
kubernetes/core/: deployment.yaml  service.yaml
kubernetes/kafka/: README.md  kustomization.yaml
kubernetes/kafka/kafka-ui/: config-map.yaml  deployment.yaml  kustomization.yaml  secret.yaml  service-account.yaml  service.yaml
kubernetes/kafka/strimzi/: kafka-topics.yaml  kafka.yaml  kustomization.yaml
kubernetes/relay/: deployment.yaml  service.yaml
kubernetes/server/: deployment.yaml  kustomization.yaml  service.yaml
models/detect/: dataset.yaml  eval.py  pyproject.toml  test.py  train.py
recorder/: pyproject.toml  test.ipynb
recorder/src/: config.py  main.py  video_util.py
relay/: Dockerfile
relay/src/: config.js  index.js  socket.js
server/: Dockerfile  README.md  pyproject.toml  slim.report.json
server/app/: package-lock.json  package.json
server/app/public/: index.html
server/app/src/: App.js  Source.js
server/app/src/styles/: index.css
server/app/src/views/: Stream.js
server/src/: config.py  main.py
server/src/routes/: healthz.py  stream.py
server/src/services/: streams.py
skaffold/: strimzi.yaml
